force-app/main/default/objects/AttributeDefinedResponse__c/AttributeDefinedResponse__c.object-meta.xml
<CustomObject>
    <label>Attribute Defined Response</label>
    <nameField>
        <displayFormat>ADR-{00000}</displayFormat>
        <label>AttributeDefinedResponse Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AttributeDefinedResponse</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>