force-app/main/default/objects/AttributeDefinedResponse__c/fields/Attribute__c.field-meta.xml
<CustomField>
    <fullName>Attribute__c</fullName>
    <label>Attribute</label>
    <referenceTo>Attribute__c</referenceTo>
    <relationshipLabel>AttributeDefinedResponse</relationshipLabel>
    <relationshipName>AttributeDefinedResponses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>