force-app/main/default/objects/AttributeDefinedResponse__c/fields/DefinedResponse__c.field-meta.xml
<CustomField>
    <fullName>DefinedResponse__c</fullName>
    <label>Defined Response</label>
    <length>200</length>
    <type>Text</type>
</CustomField>