force-app/main/default/objects/AttributeDefinedResponse__c/fields/DefinedResponseOrder__c.field-meta.xml
<CustomField>
    <fullName>DefinedResponseOrder__c</fullName>
    <inlineHelpText>the sequence in which responses have to be displayed</inlineHelpText>
    <label>Defined Response Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>