force-app/main/default/objects/AttributeDefinedResponse__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Indicates if the attribute response is active or inactive</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>