force-app/main/default/objects/AttributeDefinedResponse__c/fields/UniqueID__c.field-meta.xml
<CustomField>
    <fullName>UniqueID__c</fullName>
    <description>Stores unique ID for Attribute Defined Response - a combination of attribute title and defined response.</description>
    <externalId>true</externalId>
    <label>Unique ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>